
I think we can call this finished.
----------------------------------------------------------------------
Mon Jul 23 18:01:37 2001                        Michael Jennings (mej)

Well that was dumb.  Comments are supposed to be *ignored*. :P
----------------------------------------------------------------------
Mon Jul 23 23:25:13 2001                        Michael Jennings (mej)

Damnit.  It was screwing up on blank lines too. >:I
----------------------------------------------------------------------
Sat Sep 22 09:24:41 2001                        Michael Jennings (mej)

Fixed a compilation issue on some systems where libX11 would not be
linked in with the test program.  This is libast 0.4.
----------------------------------------------------------------------
Mon Jan 21 18:02:20 2002                        Michael Jennings (mej)

Don't try this at home.  This package has been discombobulated by
trained professionals.
----------------------------------------------------------------------
Tue Feb 12 00:03:12 2002                        Michael Jennings (mej)

Please ignore the warnings during compile.  I didn't want to check
this in just yet, but I kinda broke Eterm and committed it. :(
----------------------------------------------------------------------
Tue Feb 12 00:23:36 2002                        Michael Jennings (mej)

...and then I came to my senses....  :-P
----------------------------------------------------------------------
Tue Feb 12 10:40:37 2002                        Michael Jennings (mej)

Still not fleshed out, but at least the warnings are gone. :-)
----------------------------------------------------------------------
Sun Feb 17 12:10:59 2002                        Michael Jennings (mej)

Hopefully now this will make more sense.  The string class is now
fleshed out...along with a complete set of unit tests. :)
----------------------------------------------------------------------