@@ -134,3 +134,7 @@ Sun Feb 17 12:10:59 2002                        Michael Jennings (mej)
 Hopefully now this will make more sense.  The string class is now
 fleshed out...along with a complete set of unit tests. :)
 ----------------------------------------------------------------------
+Mon Feb 18 21:54:25 2002                        Michael Jennings (mej)
+
+Mmmmm...reusability. :-)
+----------------------------------------------------------------------
